// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SweepstakesStatusComponent > snapshots > matches the snapshot of a running public sweepstakes 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-2 rounded-xl border py-4 shadow-md w-full"
    data-slot="card"
  >
    <div
      class="@container/card-header auto-rows-min grid-rows-[auto_auto] px-4 space-y-0.5 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-4 flex items-center justify-between"
      data-slot="card-header"
    >
      <div
        class="font-semibold text-lg"
        data-slot="card-title"
      >
        <span>
          Your sweepstakes is live
        </span>
      </div>
      <span
        class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-primary text-primary-foreground [a&]:hover:bg-primary/90 text-sm"
        data-slot="badge"
      >
        Active
      </span>
    </div>
    <div
      class="px-4 space-y-4"
      data-slot="card-content"
    >
      <div
        class="relative w-full rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[16_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 text-info [&>svg]:text-current bg-info/10 border-info/50"
        data-slot="alert"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"
          />
          <circle
            cx="12"
            cy="12"
            r="3"
          />
        </svg>
        <div
          class="flex flex-col sm:flex-row items-start justify-between gap-3 w-full"
        >
          <div
            class="flex-1"
          >
            <div
              class="col-start-2 line-clamp-1 min-h-4 font-medium tracking-tight"
              data-slot="alert-title"
            >
              Sweepstakes is Public
            </div>
            <div
              class="col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
              data-slot="alert-description"
            >
              <span>
                Your sweepstakes will appear on the browse page and can be discovered and accessed by anyone.
                <br />
                <br />
                <span
                  class="text-xs font-semibold"
                >
                  Note: Visibility changes can take up to an hour to fully propagate.
                </span>
              </span>
            </div>
          </div>
          <button
            aria-autocomplete="none"
            aria-controls="radix-:id1:"
            aria-expanded="false"
            class="flex h-9 shadow-xs items-center justify-between rounded-md border border-input dark:bg-input/30 px-3 py-2 text-sm ring-offset-background data-placeholder:text-muted-foreground focus:outline-hidden focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-full sm:w-34 shrink-0 bg-white"
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              style="pointer-events: none;"
            >
              Public
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-4 w-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock h-5 w-5 text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6v6l4 2"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <div>
          <div
            class="text-sm font-medium"
          >
            Ends in 16 days
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            (GMT+00:00) Coordinated Universal Time
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-4"
      >
        <div
          class="flex items-center gap-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-calendar h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          <div>
            <div
              class="text-sm font-medium"
            >
              Start Date
            </div>
            <div
              class="text-sm text-muted-foreground"
            >
              Jun 1, 2026 at 12:00 PM
            </div>
          </div>
        </div>
        <div
          class="flex items-center gap-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-calendar h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          <div>
            <div
              class="text-sm font-medium"
            >
              End Date
            </div>
            <div
              class="text-sm text-muted-foreground"
            >
              Jul 1, 2026 at 12:00 PM
            </div>
          </div>
        </div>
      </div>
      <div
        class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px"
        data-orientation="horizontal"
        data-slot="separator"
        role="none"
      />
      <div
        class="space-y-3"
      >
        <div
          class="font-medium"
        >
          Share Sweepstakes
        </div>
        <div
          class="flex gap-2"
        >
          <div
            class="relative flex flex-1"
          >
            <input
              class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input flex h-9 w-full min-w-0 rounded-md border px-3 py-1 shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-white file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive flex-1 pr-12 text-sm font-mono bg-muted/30 cursor-default"
              data-slot="input"
              placeholder="Sweepstakes URL"
              readonly=""
              value="https://giveaway.dog/browse/summer"
            />
            <button
              class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 rounded-md gap-1.5 has-[>svg]:px-2.5 absolute right-1 top-1/2 -translate-y-1/2 h-7 w-7 p-0 hover:bg-muted"
              data-slot="button"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-copy h-4 w-4"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <rect
                  height="14"
                  rx="2"
                  ry="2"
                  width="14"
                  x="8"
                  y="8"
                />
                <path
                  d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                />
              </svg>
            </button>
          </div>
          <button
            class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-white shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 dark:hover:text-accent size-9 p-0 [&_svg]:mr-0"
            data-slot="button"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-qr-code"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="5"
                rx="1"
                width="5"
                x="3"
                y="3"
              />
              <rect
                height="5"
                rx="1"
                width="5"
                x="16"
                y="3"
              />
              <rect
                height="5"
                rx="1"
                width="5"
                x="3"
                y="16"
              />
              <path
                d="M21 16h-3a2 2 0 0 0-2 2v3"
              />
              <path
                d="M21 21v.01"
              />
              <path
                d="M12 7v3a2 2 0 0 1-2 2H7"
              />
              <path
                d="M3 12h.01"
              />
              <path
                d="M12 3h.01"
              />
              <path
                d="M12 16v.01"
              />
              <path
                d="M16 12h1"
              />
              <path
                d="M21 12v.01"
              />
              <path
                d="M12 21v-1"
              />
            </svg>
          </button>
          <a
            class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-white shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 dark:hover:text-accent size-9 p-0 [&_svg]:mr-0"
            data-slot="button"
            href="https://giveaway.dog/browse/summer"
            rel="noopener noreferrer"
            target="_blank"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-external-link"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 3h6v6"
              />
              <path
                d="M10 14 21 3"
              />
              <path
                d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SweepstakesStatusComponent > snapshots > matches the snapshot of an expired sweepstakes without winners 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-2 rounded-xl border py-4 shadow-md w-full"
    data-slot="card"
  >
    <div
      class="@container/card-header auto-rows-min grid-rows-[auto_auto] px-4 space-y-0.5 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-4 flex items-center justify-between"
      data-slot="card-header"
    >
      <div
        class="font-semibold text-lg"
        data-slot="card-title"
      >
        <span>
          Your sweepstakes has ended
        </span>
      </div>
      <span
        class="inline-flex items-center justify-center rounded-md border px-2 py-0.5 font-medium w-fit whitespace-nowrap shrink-0 [&>svg]:size-3 gap-1 [&>svg]:pointer-events-none focus-visible:border-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive transition-[color,box-shadow] overflow-hidden border-transparent bg-destructive text-white [a&]:hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60 text-sm"
        data-slot="badge"
      >
        Expired
      </span>
    </div>
    <div
      class="px-4 space-y-4"
      data-slot="card-content"
    >
      <div
        class="flex flex-col gap-3 p-4 bg-red-50 border border-red-300 rounded-lg"
      >
        <div
          class="flex items-center justify-between gap-3"
        >
          <div
            class="flex items-center gap-3"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-trophy h-5 w-5 text-red-600"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M10 14.66v1.626a2 2 0 0 1-.976 1.696A5 5 0 0 0 7 21.978"
              />
              <path
                d="M14 14.66v1.626a2 2 0 0 0 .976 1.696A5 5 0 0 1 17 21.978"
              />
              <path
                d="M18 9h1.5a1 1 0 0 0 0-5H18"
              />
              <path
                d="M4 22h16"
              />
              <path
                d="M6 9a6 6 0 0 0 12 0V3a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1z"
              />
              <path
                d="M6 9H4.5a1 1 0 0 1 0-5H6"
              />
            </svg>
            <div>
              <div
                class="text-sm font-semibold text-red-900"
              >
                Action Required: Winners Not Selected
              </div>
              <div
                class="text-xs text-red-700 mt-0.5"
              >
                Your sweepstakes has ended. Select winners now to complete the process.
              </div>
            </div>
          </div>
          <button
            class="cursor-pointer inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-destructive text-destructive-foreground shadow-xs hover:bg-destructive/90 focus-visible:ring-destructive/20 dark:focus-visible:ring-destructive/40 dark:bg-destructive/60 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 shrink-0"
            data-slot="button"
          >
            Select Winners
          </button>
        </div>
      </div>
      <div
        class="relative w-full rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[16_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 text-warning [&>svg]:text-current bg-warning/10 border-warning/50"
        data-slot="alert"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-eye-off"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.733 5.076a10.744 10.744 0 0 1 11.205 6.575 1 1 0 0 1 0 .696 10.747 10.747 0 0 1-1.444 2.49"
          />
          <path
            d="M14.084 14.158a3 3 0 0 1-4.242-4.242"
          />
          <path
            d="M17.479 17.499a10.75 10.75 0 0 1-15.417-5.151 1 1 0 0 1 0-.696 10.75 10.75 0 0 1 4.446-5.143"
          />
          <path
            d="m2 2 20 20"
          />
        </svg>
        <div
          class="flex flex-col sm:flex-row items-start justify-between gap-3 w-full"
        >
          <div
            class="flex-1"
          >
            <div
              class="col-start-2 line-clamp-1 min-h-4 font-medium tracking-tight"
              data-slot="alert-title"
            >
              Sweepstakes is Private
            </div>
            <div
              class="col-start-2 grid justify-items-start gap-1 text-sm [&_p]:leading-relaxed"
              data-slot="alert-description"
            >
              <span>
                Your sweepstakes is only accessible to other people within your organization. It will not appear on the public browse page.
                <br />
                <br />
                <span
                  class="text-xs font-semibold"
                >
                  Note: Visibility changes can take up to an hour to fully propagate.
                </span>
              </span>
            </div>
          </div>
          <button
            aria-autocomplete="none"
            aria-controls="radix-:id1:"
            aria-expanded="false"
            class="flex h-9 shadow-xs items-center justify-between rounded-md border border-input bg-white dark:bg-input/30 px-3 py-2 text-sm ring-offset-background data-placeholder:text-muted-foreground focus:outline-hidden focus:ring-2 focus:ring-ring focus:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 [&>span]:line-clamp-1 w-full sm:w-34"
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              style="pointer-events: none;"
            >
              Private
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-4 w-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="flex items-center gap-3"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-clock h-5 w-5 text-primary"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 6v6l4 2"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <div>
          <div
            class="text-sm font-medium"
          >
            Finished 14 days ago
          </div>
          <div
            class="text-xs text-muted-foreground"
          >
            (GMT+00:00) Coordinated Universal Time
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 md:grid-cols-2 gap-4"
      >
        <div
          class="flex items-center gap-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-calendar h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          <div>
            <div
              class="text-sm font-medium"
            >
              Start Date
            </div>
            <div
              class="text-sm text-muted-foreground"
            >
              May 1, 2026 at 12:00 PM
            </div>
          </div>
        </div>
        <div
          class="flex items-center gap-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-calendar h-5 w-5 text-primary"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 2v4"
            />
            <path
              d="M16 2v4"
            />
            <rect
              height="18"
              rx="2"
              width="18"
              x="3"
              y="4"
            />
            <path
              d="M3 10h18"
            />
          </svg>
          <div>
            <div
              class="text-sm font-medium"
            >
              End Date
            </div>
            <div
              class="text-sm text-muted-foreground"
            >
              Jun 1, 2026 at 12:00 PM
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
